--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -28,7 +28,14 @@ jobs:
                 --junitxml=pytest.xml \
                 --cov-report=xml \
                 --cov=src
+                
         - name: Upload coverage reports to Codecov
           uses: codecov/codecov-action@v5
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+
+        - name: Upload test results to Codecov
+          if: ${{ !cancelled() }}
+          uses: codecov/test-results-action@v1
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
