--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -17,15 +17,29 @@ jobs:
         working-directory: pytrace
     steps:
         - uses: actions/checkout@v4
+
         - uses: actions/setup-python@v5
           with:
             python-version: '3.10'
-        - name: Run tests and code coverage
+
+        - name: Cache Python dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.cache/pip
+            key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+            restore-keys: |
+              ${{ runner.os }}-pip-
+
+        - name: Install dependencies
           run: |
             python3 -m venv venv
             source venv/bin/activate
             pip install -r src/requirements.txt
-            pip install -r test/requirements.txt            
+            pip install -r test/requirements.txt
+
+        - name: Run tests and code coverage
+          run: |
+            source venv/bin/activate
             pytest \
                 --junitxml=pytest.xml -o junit_family=legacy \
                 --cov-report=xml \
