--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -62,50 +62,33 @@ jobs:
     defaults:
       run:
         working-directory: rust-tracer
+    env:
+      CARGO_TERM_COLOR: always
     steps:
-        - uses: actions/checkout@v4
-       
-        - name: Install latest nightly
-          uses: actions-rs/toolchain@v1
-          with:
-              toolchain: stable
-              override: true
+    - uses: actions/checkout@v4
 
-        - name: Cache Cargo registry
-          uses: actions/cache@v3
-          with:
-            path: |
-              ~/.cargo/registry
-              ~/.cargo/bin
-            key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-cargo-
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        override: true
 
-        - name: Install dependencies
-          run: cargo fetch
+    - name: Build
+      run: cargo build --verbose
 
-        - name: Install cargo-nextest and cargo-tarpaulin
-          run: |
-            cargo install cargo-nextest
-            cargo install cargo-tarpaulin
+    - name: Run tests
+      run: cargo test --verbose
+      env:
+        CARGO_INCREMENTAL: '0'
+        RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+        RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
 
-        - name: Run tests and generate test report
-          run: |
-            cargo nextest run --output-format junit > test-results.xml
+    - name: rust-grcov
+      uses: actions-rs/grcov@v0.1
 
-        - name: Run tests with coverage
-          run: |
-            cargo tarpaulin --out Xml --output coverage.xml
-                
-        - name: Upload coverage to Codecov
-          uses: codecov/codecov-action@v5
-          with:
-            files: coverage.xml
-            token: ${{ secrets.CODECOV_TOKEN }}
-
-        - name: Upload test results to Codecov
-          if: ${{ !cancelled() }}
-          uses: codecov/test-results-action@v1
-          with:
-            files: test-results.xml
-            token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Codecov
+      uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
+      with:
+        verbose: true
+        fail_ci_if_error: true
