--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -72,29 +72,25 @@ jobs:
         toolchain: nightly
         override: true
 
-    # - name: Build
-    #   run: cargo build --verbose
+    - name: Build
+      run: cargo build --verbose
 
-    # - name: Run tests
-    #   run: cargo test --verbose
-      # env:
-      #   CARGO_INCREMENTAL: '0'
-      #   RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-      #   RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+    - name: Run tests
+      run: cargo test --verbose
 
-    - uses: actions-rs/cargo@v1
-      with:
-        command: test
-        args: --all-features --no-fail-fast  # Customize args for your own needs
-      env:
-        CARGO_INCREMENTAL: '0'
-        RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-        RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+    # - uses: actions-rs/cargo@v1
+    #   with:
+    #     command: test
+    #     args: --all-features --no-fail-fast  # Customize args for your own needs
+    #   env:
+    #     CARGO_INCREMENTAL: '0'
+    #     RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
+    #     RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
 
-    - name: Codecov
-      uses: codecov/codecov-action@v4
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
-      with:
-        verbose: true
-        fail_ci_if_error: true
+    # - name: Codecov
+    #   uses: codecov/codecov-action@v4
+    #   env:
+    #     CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
+    #   with:
+    #     verbose: true
+    #     fail_ci_if_error: true
