Upload test report

--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -97,16 +97,36 @@ jobs:
 
     - name: Build
       run: |        
-        cmake -B build
-        cmake --build build
+        # cmake -B build
+        cmake -DCODE_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug -B build
+        cmake --build build --config Debug 
+
 
     - name: Run tests
       run: |
         ctest --test-dir build --verbose
 
+    - name: Generate coverage report
+      run: |
+        export OPTIONS=" --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused"
+        # Capture coverage data
+        lcov --directory build --capture --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Remove coverage for unwanted files
+        lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Filter coverage to include only 'src' directory
+        lcov --extract coverage.info '**/src/*' --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Display the coverage report
+        lcov --list coverage.info
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        files: coverage.info
+        token: ${{ secrets.CODECOV_TOKEN }}
+
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
-        files: build/report.xml
+        files: cpp-trace/build/report.xml
         token: ${{ secrets.CODECOV_TOKEN }}
