--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -78,19 +78,55 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
 
-    # - uses: actions-rs/cargo@v1
-    #   with:
-    #     command: test
-    #     args: --all-features --no-fail-fast  # Customize args for your own needs
-    #   env:
-    #     CARGO_INCREMENTAL: '0'
-    #     RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-    #     RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
 
-    # - name: Codecov
-    #   uses: codecov/codecov-action@v4
-    #   env:
-    #     CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
-    #   with:
-    #     verbose: true
-    #     fail_ci_if_error: true
+  test-cpp-tracer:
+
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: cpp-trace
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgtest-dev
+        sudo apt-get install -y cmake
+        sudo apt-get install -y libboost-all-dev
+
+    - name: Build
+      run: |        
+        # cmake -B build
+        cmake -DCODE_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug -B build
+        cmake --build build --config Debug 
+
+
+    - name: Run tests
+      run: |
+        ctest --test-dir build --verbose
+
+    - name: Generate coverage report
+      run: |
+        export OPTIONS=" --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused"
+        # Capture coverage data
+        lcov --directory build --capture --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Remove coverage for unwanted files
+        lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Filter coverage to include only 'src' directory
+        lcov --extract coverage.info '**/src/*' --output-file coverage.info --ignore-errors inconsistent --ignore-errors range --ignore-errors unused
+        # Display the coverage report
+        lcov --list coverage.info
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        files: coverage.info
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
+      with:
+        files: cpp-trace/build/report.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
