--- a/codecov.yml
+++ b/codecov.yml
@@ -6,6 +6,7 @@ coverage:
         target: auto #default
         threshold: 0%
         base: auto 
+
 comment:                  #this is a top-level key
   layout: " diff, flags, files"
   behavior: default
@@ -13,3 +14,24 @@ comment:                  #this is a top-level key
   require_base: false        # [true :: must have a base report to post]
   require_head: true       # [true :: must have a head report to post]
   hide_project_coverage: false # [true :: only show coverage on the git diff aka patch coverage]]
+
+component_management:
+  default_rules:  # default rules that will be inherited by all components
+    statuses:
+      - type: project # in this case every component that doens't have a status defined will have a project type one
+        target: auto
+        branches:
+          - "!main"
+  individual_components:
+    - component_id: pytrace  # this is an identifier that should not be changed
+      name: pytrace  # this is a display name, and can be changed freely
+      paths:
+        - pytrace/**
+    - component_id: rust-tracer
+      name: rust-tracer
+      paths:
+        - rust-tracer/**
+    - component_id: cpp-trace
+      name: cpp-trace
+      paths:
+        - cpp-trace/**
