--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -106,13 +106,13 @@ jobs:
 
     - name: Generate coverage report
       run: |
-        export OPTIONS=" --output-file coverage.info --ignore-errors unused"
+        export OPTIONS=" --output-file coverage.info"
         # Capture coverage data
-        gcov --directory build --capture --output-file coverage.info --ignore-errors unused
+        gcov --directory build --capture --output-file coverage.info
         # Remove coverage for unwanted files
-        gcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info --ignore-errors unused
+        gcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
         # Filter coverage to include only 'src' directory
-        gcov --extract coverage.info '**/src/*' --output-file coverage.info --ignore-errors unused
+        gcov --extract coverage.info '**/src/*' --output-file coverage.info
         # Display the coverage report
         gcov --list coverage.info
 
