--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -108,13 +108,13 @@ jobs:
       run: |
         export OPTIONS=" --output-file coverage.info"
         # Capture coverage data
-        gcov --directory build --capture --output-file coverage.info
+        lcov --directory build --capture --output-file coverage.info
         # Remove coverage for unwanted files
-        gcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
+        lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
         # Filter coverage to include only 'src' directory
-        gcov --extract coverage.info '**/src/*' --output-file coverage.info
+        lcov --extract coverage.info '**/src/*' --output-file coverage.info
         # Display the coverage report
-        gcov --list coverage.info
+        lcov --list coverage.info
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
