--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -48,14 +48,14 @@ jobs:
         - name: Upload coverage reports to Codecov
           uses: codecov/codecov-action@v5
           with:
-            files: cov.xml
+            files: pytrace/cov.xml
             token: ${{ secrets.CODECOV_TOKEN }}
 
         - name: Upload test results to Codecov
           if: ${{ !cancelled() }}
           uses: codecov/test-results-action@v1
           with:
-            files: pytest.xml
+            files: pytrace/pytest.xml
             token: ${{ secrets.CODECOV_TOKEN }}
 
   test-rust-tracer:
