--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -42,18 +42,20 @@ jobs:
             source venv/bin/activate
             pytest \
                 --junitxml=pytest.xml -o junit_family=legacy \
-                --cov-report=xml \
+                --cov-report xml:cov.xml \
                 --cov=src
                 
         - name: Upload coverage reports to Codecov
           uses: codecov/codecov-action@v5
           with:
+            files: pytrace/cov.xml
             token: ${{ secrets.CODECOV_TOKEN }}
 
         - name: Upload test results to Codecov
           if: ${{ !cancelled() }}
           uses: codecov/test-results-action@v1
           with:
+            files: pytrace/pytest.xml
             token: ${{ secrets.CODECOV_TOKEN }}
 
   test-rust-tracer:
