--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -128,5 +128,5 @@ jobs:
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
-        # files: cpp-trace/build/report.xml
+        files: cpp-trace/build/report.xml
         token: ${{ secrets.CODECOV_TOKEN }}
