--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -121,7 +121,8 @@ jobs:
       uses: codecov/codecov-action@v5
       with:
         # files: coverage.info
-        gcov_include: '**/src/*'
+        # gcov_include: '**/src/*'
+        gcov_args: "--extract coverage.info '**/src/*'"
         token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Upload test results to Codecov
