--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -114,7 +114,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
-        files: coverage.info
+        files: cpp-trace/coverage.info
         disable_search: true
         # gcov_include: '**/src/*'
         # gcov_args: "--extract coverage.info '**/src/*'"
