Add coverage config

--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -105,17 +105,17 @@ jobs:
       run: |
         ctest --test-dir build --verbose
 
-    # - name: Generate coverage report
-    #   run: |        
-    #     lcov --directory build --capture --output-file coverage.info
-    #     lcov --extract coverage.info '**/src/*' --output-file coverage.info
-    #     lcov --list coverage.info
+    - name: Generate coverage report
+      run: |        
+        lcov --directory build --capture --output-file coverage.info
+        lcov --extract coverage.info '**/src/*' --output-file coverage.info
+        lcov --list coverage.info
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
-        # files: cpp-trace/coverage.info
-        # disable_search: true
+        files: cpp-trace/coverage.info
+        disable_search: true
         # gcov_include: '**/src/*'
         # gcov_args: "--extract coverage.info '**/src/*'"
         token: ${{ secrets.CODECOV_TOKEN }}
