--- a/.github/workflows/test_pytrace.yml
+++ b/.github/workflows/test_pytrace.yml
@@ -9,6 +9,10 @@ on:
 
 jobs:
 
+  pre-commit:
+    uses: ./.github/workflows/pre-commit.yml
+    secrets: inherit
+
   test-pytrace:
 
     runs-on: ubuntu-latest
