--- a/.github/workflows/otel-traces.yml
+++ b/.github/workflows/otel-traces.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Export Workflow Trace
-        uses: corentinmusard/otel-cicd-action@v1
+        uses: corentinmusard/otel-cicd-action@v2
         with:
-          otlpEndpoint: ${{ secrets.DASH0_OTLP_ENDPOINT }}
+          otlpEndpoint: https://ingress.europe-west4.gcp.dash0.com
           otlpHeaders: ${{ secrets.DASH0_OTLP_HEADERS }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           runId: ${{ github.event.workflow_run.id }}
