--- a/.github/workflows/otel-traces.yml
+++ b/.github/workflows/otel-traces.yml
@@ -14,8 +14,11 @@ jobs:
       - name: Export Workflow Trace
         uses: corentinmusard/otel-cicd-action@v2
         with:
-          otlpEndpoint: https://ingress.europe-west4.gcp.dash0.com
-          otlpHeaders: "Authorization: Bearer auth_iCABUdBSJcIQ8QE1Xklq10zsyBQkJ9NW"
+          # otlpEndpoint: https://ingress.europe-west4.gcp.dash0.com
+          # DASH0_OTLP_ENDPOINT: grpc://ingress.eu-west-1.aws.dash0.com:4317
+          otlpEndpoint: ingress.europe-west4.gcp.dash0.com:4317
+          otlpHeaders: Authorization: Bearer auth_iCABUdBSJcIQ8QE1Xklq10zsyBQkJ9NW
+          # DASH0_OTLP_HEADERS: Authorization: Bearer auth_XXXXXXXXXXXXXXXXXXXXXXXX
           # otlpHeaders: ${{ secrets.DASH0_OTLP_HEADERS }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           runId: ${{ github.event.workflow_run.id }}
